# ros_hackathon

./: CMakeLists.txt  leftright.py
nodes/: left_right.py
